# Generic_FILE_IO

./: README.md  pyproject.toml  setup.py
Generic_VENV_Manger/: pyproject.toml
generic_file_io/core/: generic_append_to_file.py  generic_create_file.py  generic_create_folder.py  generic_overwrite_file.py  generic_remove_file.py
generic_file_io/core/pruning/: generic_remove_duplicates.py
generic_file_io/core/support/: generic_is_unique_entry.py
generic_file_io/csv_manager/: clean_csv_file.py  csv_append.py  csv_create.py
generic_file_io/csv_manager/support/: format_csv_entry.py
generic_file_io/json_manager/: read_json.py  write_json.py
