[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "generic_venv_manager"
version = "0.1"
description = "A simple ENV creator and manager for Python projects"
authors = [{name = "Steven Naliwajka", email = "Steven716@live.com"}]
dependencies = []
requires-python = ">=3.6"

[tool.setuptools.packages.find]
where = ["."]
include = ['Codebase', 'Codebase.DataCollection', 'Codebase.Pathing', 'Codebase.Generic_VENV_Manger', 'Codebase.FileIO',
    'Codebase.SupportMethods', 'Codebase.DataCollection.Brain', 'Codebase.DataCollection.Connection',
    'Codebase.DataCollection.Data', 'Codebase.Generic_VENV_Manger.VENVCodeBase', 'Codebase.Generic_VENV_Manger.VENVSetup',
    'Codebase.Generic_VENV_Manger.VENVCodeBase.VENVPathing', 'Codebase.Generic_VENV_Manger.VENVCodeBase.VENVReadJSON',
    'Codebase.Generic_VENV_Manger.VENVCodeBase.VENVSupport', 'Codebase.FileIO.JSON', 'Codebase.FileIO.CSV']
